--- a/www/index.html
+++ b/www/index.html
@@ -1,43 +1,77 @@
 <!DOCTYPE html>
-<!--
-    Copyright (c) 2012-2014 Adobe Systems Incorporated. All rights reserved.
 
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
 <html>
     <head>
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
         <meta name="msapplication-tap-highlight" content="no" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
+        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+        
         <title>Hello World</title>
     </head>
     <body>
-        <div class="app">
-            <h1>PhoneGap</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
+        <div id="homeScreen" data-role="page">
+        <img src="img/green-leaf.jpg" class="banner" />
+            <div data-role="content">
+            <ul data-role="listview" data-inset="true" class="ui-nodisc-icon ui-alt-icon">
+                <li><a href="#allEntry" >See all entries</a></li>
+                <li><a href="#searchId">Search By user ID</a></li>
+                <li><a href="#searchKey">Search By keyword</a></li>
+                <li><a href="#newRec">Add a new record</a></li>
+
+            </ul>
+            </div>
+        </div>
+        <div id="searchId" data-role="page">
+            <img src="img/green-leaf.jpg" class="banner" />
+            <div data-role="content">
+                <form action="">
+                    <label for="search-basic">User ID</label>
+                    <input type="search" name="search" id="search-basic" value="" />
+                    <input type="submit" name="go" value="Search by ID" data-theme="b">
+                </form>
+            </div>
+        </div>
+        <div id="searchKey" data-role="page">
+            <img src="img/green-leaf.jpg" class="banner" />
+            <div data-role="content">
+                <form action="">
+                    <label for="search-basic">Keyword</label>
+                    <input type="search" name="search" id="search-basic" value="" />
+                    <input type="submit" name="go" value="Search by Keyword" data-theme="b">
+                </form>
+            </div>
+        </div>
+        <div id="newRec" data-role="page">
+            <img src="img/green-leaf.jpg" class="banner" />
+            <div data-role="content">
+                <form action="">
+                    <div data-role="fieldcontain">
+                        <label for="fname">First Name:</label>
+                        <input type="text" name="fname" id="fname" value=""  />
+                    </div>
+                    <div data-role="fieldcontain">
+                        <label for="lname">Last Name:</label>
+                        <input type="text" name="lname" id="lname" value=""  />
+                    </div>
+                    <div data-role="fieldcontain">
+                        <label for="zip">Zip Code:</label>
+                        <input type="text" name="zip" id="zip" value=""  />
+                    </div>  
+                    <div data-role="fieldcontain">
+                        <label for="email">Email address:</label>
+                        <input type="email" name="email" id="email" value=""  />
+                    </div>  
+                    <input type="submit" name="go" value="Submit" data-theme="b">
+                </form>
             </div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
+        <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+        <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             app.initialize();
