--- a/www/index.html
+++ b/www/index.html
@@ -14,9 +14,10 @@
         <link rel="stylesheet" href="css/bootstrap-theme.min.css" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         
-        <title>Assignment 5</title>
+        <title>Assignment 4</title>
     </head>
     <body>
+        <!-- index page -->
         <div id="homeScreen" data-role="page">
         <a href="#homeScreen"><img src="img/green-leaf.jpg" class="banner" /></a>
             <div data-role="content">
@@ -31,6 +32,7 @@
                 <h4><a href="#homeScreen">Back to top menu</a></h4>
             </div>
         </div>
+        <!-- All entry page -->
         <div id="allEntry" data-role="page">
             <a href="#homeScreen"><img src="img/green-leaf.jpg" class="banner" /></a>
             <div data-role="content">
@@ -42,6 +44,7 @@
                 <h4><a href="#homeScreen">Back to top menu</a></h4>
             </div>
         </div>
+        <!-- Search for user by ID -->
         <div id="searchId" data-role="page">
             <a href="#homeScreen"><img src="img/green-leaf.jpg" class="banner" /></a>
             <div data-role="content">
@@ -56,6 +59,7 @@
                 <h4><a href="#homeScreen">Back to top menu</a></h4>
             </div>
         </div>
+        <!-- Search for user by keyword -->
         <div id="searchKey" data-role="page">
             <a href="#homeScreen"><img src="img/green-leaf.jpg" class="banner" /></a>
             <div data-role="content">
@@ -70,6 +74,7 @@
                 <h4><a href="#homeScreen">Back to top menu</a></h4>
             </div>
         </div>
+        <!-- Add a new record -->
         <div id="newRec" data-role="page">
             <a href="#homeScreen"><img src="img/green-leaf.jpg" class="banner" /></a>
             <div data-role="content">
